fix issue with dialog populating on page load. dialog display rule was set to flex therefore making the element visible, overriding the default hidden state of the dialog element

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,14 +83,16 @@ dialog {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 30px;
   width: 400px;
   border: none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
 }
 
 form {
